--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
