--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-.idea
+# IDE
+/.idea
+/.vscode
 
 # dependencies
 /node_modules
@@ -10,7 +11,7 @@
 /coverage
 
 # production
-/build
+/dist
 
 # misc
 .DS_Store
